--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body, html{
 }
 body{
   margin: 0px;
-  background-color:#444;
+  background-image: url(http://i.ytimg.com/vi/4ZZ_BOWvAq8/maxresdefault.jpg);
   font-size: 18px;
 }
 body, a:link, a:visited, a:active{
@@ -21,23 +21,20 @@ body, a:link, a:visited, a:active{
   background-color: #777;
 }
 .dancer{
-  border:10px solid red;
+  background-size: 100px;
+  position:absolute;
+}
+.blinky img {
+  width: 100px;
+  height: 100px;
   border-radius:10px;
   position:absolute;
 }
-.blinky{
-  border:10px solid red;
-  border-radius:10px;
-  position:absolute;
-}
-.colory{
-  border-color: white;
-  border: 10px, solid;
-  border-radius:10px;
+.colory img{
+  width: 250px;
+  height: auto;
   position:absolute;
 }
 .growy{
-  border:10px solid white;
-  border-radius:1px;
   position:absolute;
 }
